CS2106/Lab2/Lab2Programs/part1/autograder/results.out
Test date and time: Thursday, 15 February 2024, 13:35:26

Directory A0183741Y score 3 /        3
Directory A0281754H score 2 /        3
subs/A0285757B//utils.c:3:5: error: conflicting types for 'sum'
int sum(int sum_array[], int n) {
    ^
subs/A0285757B/utils.h:2:8: note: previous declaration is here
double sum(int [], int);
       ^
1 error generated.
Directory A0285757B has compile error.
Directory A0285757B score 0 /        3

Processed 3 files.
